# fdm_filaments

./: README.md  populate_box.sh  powerspectrum_from_box.sh  render_box.sh  rotate_box.sh  setup.cfg
fdmfilaments/: compute_powerspectrum_from_box.py  correlation_functions_from_box.py  cosmology.py  generate_cylinder_gas.py  generate_density.py  io_utils.py  render_box.py  rotate_box.py
notebooks/: ellipsoidal_collapse.ipynb  global_style.mplstyle  paper_plots.ipynb
parameters/: L_2.00_N_1024_Ncyl_8_m22_1.00_aLASSO_seed_20.yaml  L_2.00_N_2048_Ncyl_8_m22_1.00_aLASSO_seed_20.yaml  single_cylinder.yaml  template.yaml
