[metadata]
name = fdmfilaments
version = 0.1
author = Tim Zimmermann
author_email = timzi@uio.no
description = Code for the reproduction of the paper plots of arxiv...
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.package_data]
* = README.md
